--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,22 @@
   </head>
 
   <body>
+
+    <nav>
+      <ul>
+        <% unless current_user %>
+          <li><%= nav_link_to "Sign Up", new_user_registration_path %>
+          <li><%= nav_link_to "Sign In", new_user_session_path %>
+        <% else %>
+          <li>Welcome <%= current_user.email %></li>
+          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+        <% end %>
+      </ul>
+    </nav>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
     <%= yield %>
   </body>
 </html>
